# advent-of-code

./: README.md
2021/day01/: main.hs
2021/day02/: main.hs
2021/day03/: main.hs
2021/day05/: day05.cabal  hie.yaml
2021/day06/: day06.cabal  hie.yaml  stack.yaml
2021/day07/: day07.cabal  hie.yaml  main.hs
2021/day08/: day08.cabal  main.hs
2021/day09/: hie.yaml
2021/day10/: day10.cabal  hie.yaml  main.hs
2021/day11/: hie.yaml  main.hs
2021/day12/: day12.cabal  main.hs
2021/day13/: day13.cabal  main.hs
2021/day14/: hie.yaml
2021/day15/: Makefile  day15.cabal  hie.yaml  main.hs
2022/day01/: day01.cabal  main.hs
2022/day02/: day02.cabal  main.hs
2022/day03/: day03.cabal  stack.yaml
2022/day03/app/: Main.hs
day01/: Makefile
day03/: main.hs
day04/: day04.cabal  main.hs  package.yaml  stack.yaml
day05/: main.hs  package.yaml
day06/: day06.cabal  main.hs  package.yaml
day07/: day07.cabal  hie.yaml  package.yaml
day08/: day08.cabal  hie.yaml  main.hs
day09/: day09.cabal  main.hs
day11/: day11.cabal
day12/: hie.yaml
day13/: hie.yaml
day14/: day14.cabal  main.hs
