cabal-version:      2.4
name:               day09
version:            0.1.0.0

author:             Katie Dsouza
maintainer:         katiedsouza.13@gmail.com

executable day09
    main-is:          main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:   base >=4.14 && <5,
                     containers == 0.6.5.1,
                     split == 0.2.3.4,
                     groupBy == 0.1.0.0,
                     multiset == 0.3.4.3
    hs-source-dirs:   .
    default-language: Haskell2010