cabal-version:      2.4
name:               day07
version:            0.1.0.0

author:             Katie Dsouza
maintainer:         katiedsouza.13@gmail.com

executable day07
    main-is:          main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:   base >=4.14 && <5
                   , split
    hs-source-dirs:   .
    default-language: Haskell2010